--- a/MusicPlayer/Info.plist
+++ b/MusicPlayer/Info.plist
@@ -23,5 +23,10 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIImageName</key>
+		<string>music-logo</string>
+	</dict>
 </dict>
 </plist>
